# MLB_Review

./: README.md  data_exploration.ipynb
MLB_Review/: __init__.py  batter_dashboard
batter_dashboard/: .gitignore  README.md  config.py  pyproject.toml
batter_dashboard/batter_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
batter_dashboard/data/: __init__.py  bref_source.py  loader.py  normalization.py  pybaseball_source.py  run_value_matrix.py  savant_scraper.py
batter_dashboard/metrics/: attack_pattern.py  baseline.py  bat_tracking.py  contact_quality.py  decision_quality.py  timing.py
batter_dashboard/tests/: test_data_layer.py  test_metrics.py
