[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batter-dashboard"
version = "0.1.0"
description = "MLB hitter game-level performance dashboard data layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pybaseball==2.2.7",
  "pandas==2.2.3",
  "numpy==2.1.3",
  "plotly==5.24.1",
  "streamlit==1.40.2",
  "requests==2.32.3",
  "pyarrow==18.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[tool.setuptools]
packages = ["data", "metrics", "viz", "viz.components", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
